# macrospin_llg_python

./: .gitignore  LICENSE  README.md  pyproject.toml
macrospin_llg/: minimizers.py  model.py  solution.py
tests/: sol_Neel_new.mat  test_FM_field.py  test_afm_neel_torque.py  test_save_load.py
tests/reference/: AFM_Neel_ref.npz  FM_field_ref.npz  create_ref_AFM_Neel.py  create_ref_FM_field.py
