[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "macrospin_llg"
version = "0.1.0"
authors = [
  { name="Jakub Zelezny", email="jakub.zelezny@gmail.com" },
]
description = "A Python solver for the macrospin Landau-Lifshitz-Gilbert equation."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "assimulo", # The core dependency for the implicit solver
    "plotly",
]
